<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">2020vision</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="last_name">Last name</string>
    <string name="student_id">Student id</string>
    <string name="re_type_password">Re-type password</string>
    <string name="phone_number">Phone number</string>
    <string name="email_address">Email address</string>
    <string name="address">Address</string>
    <string name="first_name">First name</string>
    <string name="class_id">Class id</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="student">Student</string>
    <string name="teacher">Teacher</string>
    <string name="already_have_account_login_here">Already have account?Login here</string>
    <string name="face_recognition">Face Recognition</string>
    <string name="group">Group</string>
    <string name="experiment_result">Experiment Result</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_base">BaseActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="create_group">Create Group</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="distrss_scenario">Replay a Distress Scenario</string>
    <string name="group_experiment">Group Experiment</string>
    <string name="age">Age</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="remember_me">Remember Me</string>
    <string name="don_t_have_an_account_sign_up_here">Don\'t have an account? Sign Up here</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="internet_error">Internet is not working.Please check your internet connection!</string>
    <string name="login_sucess">Login Successful.</string>
    <string name="server_error">Server Not Responding. Please Try Later.</string>
    <string name="error_empty_email">Please Enter Email First.</string>
    <string name="error_valid_email">Please Enter Valid Email First.</string>
    <string name="error_empty_password">Please Enter Password First.</string>
    <string name="error_first_name">Please Enter Fist Name.</string>
    <string name="error_last_name">Please Enter Last Name.</string>
    <string name="error_age">Please Enter Age First.</string>
    <string name="error_stu_id">Please Enter StudentId First</string>
    <string name="error_class_id">Please Enter Class Id First</string>
    <string name="error_phone">Please Enter Phone Number First.</string>
    <string name="error_phone_length">Phone No. must be 10 digit.</string>

    <string name="error_retype_pass">\"Please Enter Re-type Password First! \"</string>
    <string name="error_pass_not_match">Password Not Match</string>
    <string name="error_address">Please Enter Address First!</string>
    <string name="error_less_password">Password Should Not Be Less Then 8 Characters</string>
    <string name="forgot_password_txt">Forgot Password</string>
    <string name="request">Requesting..</string>
    <string name="password_send">Password Send On Your Register Email Id!</string>
    <string name="view_detailed_effects_and_videos">View detailed effects and videos</string>
    <string name="effects_on_face">Effects on face</string>
    <string name="effects_on_lungs">Effects on lungs</string>
    <string name="effects_on_brain">Effects on brain</string>
    <string name="school_id">School id</string>
    <string name="error_student_id">please Enter Student Id First</string>
    <string name="error_school_id">Please Enter School Id First</string>
    <string name="distress_scenario">Distress Scenario</string>
    <string name="nida_curriculum">NIDA Curriculum</string>
    <string name="nida_cur">NIDA Curriculum</string>
    <string name="sync_data">Sync Data</string>
    <string name="lock_device">Lock Device</string>
    <string name="crate_new_group">Crate New Group</string>
    <string name="group_name">Group name</string>
    <string name="group_listing">Group Listing</string>
    <string name="group_id">Group id</string>
    <string name="leader_name">Leader Name</string>
    <string name="experiment_status">Experiment Status</string>
    <string name="action">Action</string>
    <string name="student_listing">Student Listing</string>
    <string name="select_all">Select All</string>
    <string name="name">Name</string>
    <string name="status">Status</string>
    <string name="error_group_name">Please Enter Group Name First!</string>
    <string name="msg_group_created">Group Created Successfully.</string>
    <string name="add_to_group">Add to group</string>
    <string name="delete">Delete</string>
    <string name="view">View</string>
    <string name="add_student">Add Student</string>
    <string name="active">Active</string>
    <string name="no_group_found">No Group Found.Please Create a new Group!</string>
    <string name="group_leader">Select Group Leader</string>
    <string name="add">Add</string>
    <string name="selected_student">Selected Student:</string>
    <string name="error_group">Please select group first.</string>
    <string name="error_group_leader">Please select group leader first.</string>
    <string name="group_members">Group Members</string>
    <string name="delete_group">Delete Group</string>
    <string name="videos">Videos</string>
    <string name="student_added">Student Added Successfully.</string>
    <string name="selected_no_member">Please select a group members first.</string>
    <string name="error_select_student">Please select a student first.</string>
    <string name="lbl_group_leader">Group Leader</string>

    <string name="action_settings">Settings</string>
    <string name="additional_listener_msg">Additional listener message</string>
    <string name="granted_permissions">Granted: %s</string>
    <string name="permanently_denied_permissions">Permanently denied: %s</string>
    <string name="permissions_required">Permissions required</string>
    <string name="rationale_permissions">Rationale: %s</string>
    <string name="request_again">Request again</string>
    <string name="choose_week">Choose Week</string>


    <string name="msg_enter_details">To view each week\'s result you must enter your password. Please enter below</string>
    <string name="msg_hint_name">Enter Password</string>
    <string name="label_submit">Submit</string>


    <string name="error_expName">Please Enter Experiment Name.</string>
    <string name="error_expDate">Please Enter Experiment Date.</string>
    <string name="error_expTime">Please Enter Experiment Time.</string>
    <string name="error_expLength">Please Enter Experiment Length.</string>
    <string name="error_vapeTime">Please Enter Vape Time.</string>
    <string name="error_expCycle">Please Enter Experiment Cycle.</string>
    <string name="error_waitTime">Please Enter Wait Time.</string>
    <string name="error_drugType">Please Enter Drug Type.</string>
    <string name="error_drugCalc">Please Enter Drug Calc.</string>
    <string name="error_watts">Please Enter Watts</string>
    <string name="error_temprature">Please Enter Temprature.</string>
    <string name="error_drugConcetration">Please Enter Drug Concentration.</string>
    <string name="error_lungs">Please Enter Lungs.</string>
    <string name="error_expEndTime">Please Enter Experiment End Time.</string>
    <string name="error_groupList">Please Select group.</string>
    <string name="error_narcan">Please Enter Narcan.</string>
    <string name="error_subjectpassed">Please Enter Subject Passed.</string>


    <string name="animation_loop_completed" tools:ignore="PluralsCandidate">Animation loop #%1$d completed</string>


    <string name="not_device_owner">You are not the owner</string>
    <string name="device_owner">You are admin!</string>
    <string name="stop_lock_task">Stop lock task</string>
    <string name="start_lock_task">Start lock task</string>
</resources>
