<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_bg"
    android:layout_margin="100dp"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/msg_enter_details"

            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/dimen_12"
            android:layout_marginLeft="@dimen/dim_10dp"
            android:layout_marginRight="@dimen/dim_10dp"
            android:gravity="center"
            android:hint="@string/msg_hint_name"
            android:paddingLeft="@dimen/_5sdp"
            android:background="@drawable/rounded_white_edittext"
            android:textSize="@dimen/font_size_16"
            />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_button_global"
            android:text="@string/label_submit"
            android:textColor="#FFF" />
    </LinearLayout>
</LinearLayout>